2006-02-06  Marius Vollmer  <mvo@zagadka.de>

	* LIBGUILEREADLINE-VERSION: Bumped versions for 1.8. 

2005-03-02  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* readline.c: Use scm_current_input_port instead of scm_cur_inp.
	Use scm_std_select instead of scm_internal_select.

2004-08-26  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* LIBGUILEREADLINE-VERSION: Bumped versions for the 1.7.1 release.
	Added LIBGUILEREADLINE_MAJOR variable for inclusion in the name of
	the shared library.
	* configure.in: AC_SUBST it.
	* Makefile.am: Substitute it into name of library.
	* ice-9/readline.scm: Use new name with load-extension.

2004-08-19  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* readline.c: Avoid the use of discouraged or
	deprecated things. 

2004-07-06  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* readline.c: Replaced all uses of deprecated SCM_FALSEP,
	SCM_NFALSEP, SCM_BOOL, SCM_NEGATE_BOOL, and SCM_BOOLP with
	scm_is_false, scm_is_true, scm_from_bool, and scm_is_bool,
	respectively.

2004-06-16  Rob Browning  <rlb@defaultvalue.org>

	* configure.in: move package and version args to AC_INIT as is now
	recommended.  This also requires m4_esyscmd to read GUILE-VERSION
	given the way AC_INIT handles its args.  Also move "foreign"
	indication here.

	* Makefile.am: move support for readline.scm to ice-9/ subdir.

	* readline.scm: moved to ./ice-9/

	* .cvsignore: add ice-9 dir.

	* ice-9/Makefile.am: new file.

	* ice-9/readline.scm: moved here from ../

	* ice-9/.cvsignore: new file.

2004-02-15  Mikael Djurfeldt  <mdj@chunk.mit.edu>

	* configure.in: Use AC_PROG_LIBTOOL instead of AM_PROG_LIBTOOL.

2004-02-08  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* Makefile.am (TAGS_FILES): Use this variable instead of
	ETAGS_ARGS so that TAGS can be built using separate build
	directory.

2003-05-04  Marius Vollmer  <mvo@zagadka.de>

	* configure.in: When checking whether readline clears SA_RESTART,